--- a/ProyectoFinal/Home/templates/Home/navbar.html
+++ b/ProyectoFinal/Home/templates/Home/navbar.html
@@ -12,6 +12,7 @@
                 {% if user.is_authenticated %}
 
                     <span class="navbar-text"> {{user.username}}</span>
+                    <li class="nav-item"><a class="nav-link active" href="{% url 'mis_blog_list' id=user.id %}">MIS BLOGS</a></li>
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'blog_create' %}">CREAR BLOGS</a></li>
                     <li class="nav-item"><a class="nav-link active" href="{% url 'editar_perfil' %}">EDITAR PERFIL: {{user.username}}</a></li>
                     <!-- <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'crear_avatar' %}">CREAR AVATAR</a></li> -->
