--- a/ProyectoFinal/Blog/templates/Blog/blog_list.html
+++ b/ProyectoFinal/Blog/templates/Blog/blog_list.html
@@ -12,12 +12,32 @@
                             <p>{{ blog.descripcion }}</p>
                             <p>Autor: {{ blog.autor }}</p>
                             <p>Categoría: {{ blog.categoria }}</p>
+                            <div class="buttons-container">
+                                <button class="Agregar Comentario a este Blog-button">
+                                    <a href="{% url 'comentario_create' blog.pk %}">Agregar Comentario</a>
+                                </button> 
+                            </div>
+                            {% if blog.comentario_set.all %}
+                                <div class="comentarios-section">
+                                    <h4>Comentarios:</h4>
+                                    <ul class="comentarios-list">
+                                        {% for comentario in blog.comentario_set.all %}
+                                            <li class="comentario-item">
+                                                <span class="comentario-usuario">{{ comentario.usuario.username }}:</span>
+                                                <span class="comentario-texto">{{ comentario.texto }}</span>
+                                            </li>
+                                        {% endfor %}
+                                    </ul>
+                                </div>
+                            {% else %}
+                                <p class="no-comentarios">No hay comentarios.</p>
+                            {% endif %}
                         </div>
                     </li>
                 {% endfor %}
             </ul>
         {% else %}
-        <h1>No existen blogs en la BBDD</h1>
+            <h1>No existen blogs en la BBDD</h1>
         {% endif %}
     </div>
 
@@ -40,34 +60,38 @@
             text-align: left;
         }
 
-        .edit-button,
-        .delete-button {
+        .buttons-container {
+            margin-top: 10px;
+        }
+
+        .comentarios-section {
+            margin-top: 20px;
             padding: 10px;
-            border: none;
+            border: 1px solid #ccc;
             border-radius: 5px;
-            cursor: pointer;
+            background-color: #f5f5f5;
+        }
+
+        .comentarios-list {
+            list-style: none;
+            padding: 0;
+        }
+
+        .comentario-item {
+            border-bottom: 1px solid #ccc;
+            padding: 10px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .comentario-usuario {
+            font-weight: bold;
             margin-right: 10px;
         }
 
-        .edit-button {
-            background-color: #757a7e;
-            color: white;
-        }
-
-        .edit-button:hover {
-            background-color: #757a7e;
-        }
-
-        .delete-button {
-            background-color: #a498a7;
-            color: white;
-        }
-
-        .delete-button:hover {
-            background-color: #a498a7;
-        }
-
-        .buttons-container {
+        .no-comentarios {
+            color: #888;
             margin-top: 10px;
         }
     </style>
