--- a/ProyectoFinal/Home/templates/Home/aboutme.html
+++ b/ProyectoFinal/Home/templates/Home/aboutme.html
@@ -64,21 +64,29 @@
             <div class="py-5">
                 <!-- Featured blog post-->
                 <div class="card mb-3">
-                    <a href="#!"><img class="card-img-top" src="{% static 'assets/about.jpg' %}" alt="Welcome Image" width="150" height="300" /></a>
+                    <a href="#!">
+                        <img class="card-img-top" src="{% static 'assets/about.jpg' %}" alt="Welcome Image">
+                    </a>
                     <div class="card-body">
                         <div class="small text-muted">Diciembre 20, 2023</div>
-                        <h2 class="card-title">WELCOME!</h2>
+                        <h2 class="card-title">Sobre mí</h2>
                         <p class="card-text">
                             <h4>
-                            ¡Bienvenido al Maravilloso Mundo de la Lectura en nuestra comunidad literaria! Aquí, celebramos la magia de las palabras y el poder transformador de las historias. Sumérgete en un universo donde los libros son ventanas a mundos inexplorados y las palabras son la llave que desbloquea la imaginación.
-                            En esta plataforma, encontraras espacios para descubrir nuevas obras y autores, y para compartir tus propias recomendaciones, o darle vida a tus creaciones literarias
-                            Registrate para unirte a esta nueva comunidad! Animate a que tus pensamientos e historias cobren vida 
-                            Te invito a explorar, compartir y descubrir el placer eterno de perderse en un buen libro!
+                                ¡Hola a todos!
+                
+                                Soy Maria Luz Tappero, una estudiante apasionada por la literatura y la programación. Esta página web es el fruto de un proyecto que estoy desarrollando como parte de mi curso de Python-Django.
+                
+                                Como amante de la lectura, siempre he creído en el poder transformador de las palabras y la magia que se encuentra entre las páginas de un buen libro. En este espacio, he querido fusionar mi interés por la literatura con mis habilidades en el mundo digital.
+                
+                                Aquí, los amantes de la escritura y la lectura encontrarán un rincón especial para compartir sus obras literarias. Este proyecto no solo es una oportunidad para aplicar los conocimientos adquiridos en mi curso, sino también un lugar acogedor donde la creatividad puede fluir libremente.
+                
+                                Únete a esta comunidad y sumérgete en la riqueza de las historias. Este es un espacio para explorar, aprender y, sobre todo, compartir el amor por las palabras.
+                
+                                ¡Bienvenidos a este viaje literario digital!
                             </h4>
                         </p>
                     </div>
                 </div>
-                
             </div>
         </div>
     </div>
