--- a/ProyectoFinal/Home/templates/Home/navbar.html
+++ b/ProyectoFinal/Home/templates/Home/navbar.html
@@ -6,6 +6,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item"><a class="nav-link active" href="{% url 'Home' %}">HOME</a></li>
+                <li class="nav-item"><a class="nav-link active" href="{% url 'about_me' %}">ABOUT</a></li>
                 <li class="nav-item"><a class="nav-link active" href="{% url 'blog_list' %}">BLOGS</a></li>
                 
 
@@ -14,7 +15,7 @@
                     <span class="navbar-text"> {{user.username}}</span>
                     <li class="nav-item"><a class="nav-link active" href="{% url 'mis_blog_list' id=user.id %}">MIS BLOGS</a></li>
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'blog_create' %}">CREAR BLOGS</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="{% url 'editar_perfil' %}">EDITAR PERFIL: {{user.username}}</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="{% url 'profile' id=user.id %}">MI PERFIL: {{user.username}}</a></li>
                     <!-- <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'crear_avatar' %}">CREAR AVATAR</a></li> -->
                     <img src="{{avatar_url}}" style="height: 40px; width: auto; border-radius: 50% ; vertical-align: middle;"/>
                     <a class = "navbar-brand" href="{% url 'logout' %}">LOGOUT</a>
