--- a/ProyectoFinal/Home/templates/Home/pageheader.html
+++ b/ProyectoFinal/Home/templates/Home/pageheader.html
@@ -1,9 +1,7 @@
 <!-- Page header with logo and tagline-->
-<header class="py-5 bg-light border-bottom mb-4" style="background-image: url(static/assets/fondouno.jpg)">
-    <div class="container">
-        <div class="text-center my-5">
-            <h1 class="fw-bolder">BIENVENIDOS AL MUNDO LITERARIO</h1>
-            <p class="lead mb-0"> Created by LUZ TAPPERO</p>
-        </div>
+<header class="py-3 bg-light border-bottom mb-2" style="background-image: url(static/assets/fondouno.jpg)">
+    <div class="container text-center my-3">
+        <h1 class="fw-bolder">Welcome</h1>
+        <p class="lead mb-0">Created by LUZ TAPPERO</p>
     </div>
 </header>
