--- a/ProyectoFinal/Home/templates/Home/profile.html
+++ b/ProyectoFinal/Home/templates/Home/profile.html
@@ -2,73 +2,74 @@
 
 {% block contenidoQueCambia %}
 
-    <div class="blog-container">
-        {% if blogs %}
-            <ul class="blog-list">
-                {% for blog in blogs %}
-                    <li class="blog-item">
-                        <div>
-                            <h3>Titulo:{{ blog.titulo }}</h3>
-                            <p>{{ blog.descripcion }}</p>
-                            <p>Autor: {{ blog.autor }}</p>
-                            <p>Categoría: {{ blog.categoria }}</p>
-                        </div>
-                    </li>
-                {% endfor %}
-            </ul>
-        {% else %}
-        <h1>No existen blogs en la BBDD</h1>
-        {% endif %}
+    <div class="profile-container">
+        <div class="profile-header">
+            <h3>MI PERFIL</h3>
+        </div>
+        <div class="profile-content">
+            <div class="profile-image-container">
+                <img src="{{ avatar_url }}" alt="Avatar" class="profile-image"/>
+            </div>
+            <div class="profile-info">
+                <p class="profile-username">Mi perfil: {{ profile.usuario }}</p>
+                <p class="profile-about">Info sobre mí: {{ profile.about_me }}</p>
+            </div>
+            <div class="buttons-container">
+                <button class="Editar Perfil">
+                    <a href="{% url 'profile_update' %}">Editar perfil</a>
+                </button> 
+            </div>
+        </div>
     </div>
 
     <style>
-        .blog-container {
-            background-color: rgba(216, 203, 186, 0.774);
+        .profile-container {
+            background-color: #f5f5f5;
+            border-radius: 10px;
             padding: 20px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            max-width: 400px;
+            margin: auto;
         }
 
-        .blog-list {
-            list-style: none;
-            padding: 0;
+        .profile-header h3 {
+            color: #333;
+            text-align: center;
         }
 
-        .blog-item {
-            margin-bottom: 20px;
-            border: 1px solid #ccc;
-            padding: 15px;
-            border-radius: 5px;
+        .profile-content {
+            display: flex;
+            align-items: center;
+            justify-content: space-around;
+            margin-top: 20px;
+        }
+
+        .profile-image-container {
+            overflow: hidden;
+            border-radius: 50%;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        .profile-image {
+            height: 100px;
+            width: 100px;
+            border-radius: 50%;
+            object-fit: cover;
+            display: block;
+            margin: auto;
+        }
+
+        .profile-info {
             text-align: left;
+            max-width: 200px;
         }
 
-        .edit-button,
-        .delete-button {
-            padding: 10px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            margin-right: 10px;
-        }
-
-        .edit-button {
-            background-color: #757a7e;
-            color: white;
-        }
-
-        .edit-button:hover {
-            background-color: #757a7e;
-        }
-
-        .delete-button {
-            background-color: #a498a7;
-            color: white;
-        }
-
-        .delete-button:hover {
-            background-color: #a498a7;
-        }
-
-        .buttons-container {
-            margin-top: 10px;
+        .profile-username,
+        .profile-about {
+            margin-bottom: 10px;
+            font-size: 14px;
+            color: #555;
         }
     </style>
+
 {% endblock %}
