--- a/ProyectoFinal/Home/templates/Home/profile_update.html
+++ b/ProyectoFinal/Home/templates/Home/profile_update.html
@@ -11,7 +11,7 @@
     </h6>
 
     <div style="margin-top: 20px; background-color: white; padding: 20px; border-radius: 5px;">
-        <form action='profile_update' method="POST">
+        <form action='{% url 'profile_update'%}' method="POST">
             {% csrf_token %}
             {{ form.as_p }}
             <input type="submit" value="Guardar" style="background-color: #4a90e2; color: white; padding: 10px 20px; border: none; border-radius: 5px; cursor: pointer;">
