--- a/ProyectoFinal/Blog/templates/Blog/blog_list.html
+++ b/ProyectoFinal/Blog/templates/Blog/blog_list.html
@@ -8,12 +8,15 @@
                 {% for blog in blogs %}
                     <li class="blog-item">
                         <div>
-                            
                             <h3>{{ blog.titulo }}</h3>
-                            <p>{{ blog.descripcion }}</p>
+                            {% if blog.imagen %}
+                                <img src="{{ blog.imagen.url }}" alt="{{ blog.titulo }}" style="max-width: 100%; height: auto;">
+                            {% endif %}
+                            <p>Descripcion:{{ blog.descripcion }}</p>
                             <p>Autor: {{ blog.autor }}</p>
                             <p>Categoría: {{ blog.categoria }}</p>
                             <p>Fecha {{ blog.Fecha }}</p>
+
                             <div class="buttons-container">
                                 <button class="Agregar Comentario a este Blog-button">
                                     <a href="{% url 'comentario_create' blog.pk %}">Agregar Comentario</a>
