--- a/ProyectoFinal/Blog/templates/Blog/mis_blog_list.html
+++ b/ProyectoFinal/Blog/templates/Blog/mis_blog_list.html
@@ -9,9 +9,14 @@
                     <li class="blog-item">
                         <div>
                             <h3>{{ blog.titulo }}</h3>
-                            <p>{{ blog.descripcion }}</p>
+                            {% if blog.imagen %}
+                                <img src="{{ blog.imagen.url }}" alt="{{ blog.titulo }}" style="max-width: 100%; height: auto;">
+                            {% endif %}
+                            <p>Descripcion:{{ blog.descripcion }}</p>
                             <p>Autor: {{ blog.autor }}</p>
                             <p>Categoría: {{ blog.categoria }}</p>
+                            <p>Fecha {{ blog.Fecha }}</p>
+
                             <div class="buttons-container">
                                 <form action="{% url 'blog_update' blog.pk %}" method="POST">
                                     {% csrf_token %}
