--- a/ProyectoFinal/Home/templates/Home/profile.html
+++ b/ProyectoFinal/Home/templates/Home/profile.html
@@ -11,10 +11,10 @@
             <img src="{{ avatar_url }}" alt="Avatar" class="profile-image" />
         </div>
         <div class="profile-info">
-            <p class="profile-username">Usuario: {{ profile.usuario }}</p>
-            <p class="profile-about">Información sobre mí: {{ profile.about_me }}</p>
+            <p class="profile-username"> <b>Usuario:</b> {{ profile.usuario }}</p>
+            <p class="profile-about"><b>Información sobre mi:</b> {{ profile.about_me }}</p>
             {% if profile.enlace %}
-                <p class="profile-enlace">Link a mi Red Social: <a href="{{ profile.enlace }}" target="_blank">{{ profile.enlace }}</a></p>
+                <p class="profile-enlace"><b>Link a mi Red Social:</b> <a href="{{ profile.enlace }}" target="_blank">{{ profile.enlace }}</a></p>
             {% endif %}
         </div>
     </div>
